# Boost

./: .gitignore  README.md  array.cpp  array01.cpp  assert.cpp  assign_dequepush.cpp  assign_increment.cpp  assign_insert.cpp  assign_listof.cpp  assign_maplistof.cpp  assign_tupleof.cpp  build  build.sh  chkfile  chkfile.cpp  deque_element.cpp  elements_deque.cpp  elements_list.cpp  elements_map.cpp  elements_multiset.cpp  elements_set.cpp  elements_stack.cpp  elements_vector.cpp  funcoes.cpp  funcoes.h  main.cpp  string_utilities.cpp
Estudos/: CMakeLists.txt
Estudos/Estruturas/: CMakeLists.txt  arrays.cpp  arvores.cpp  arvores_binarias.cpp  buscaBinaria.cpp  exercicios.cpp  fila.h  filaPrioritaria.h  filas_pilhas.cpp  grafos.cpp  heap.h  heaps.cpp  libs.h  linkedList.h  listas.cpp  objetos_1.cpp  objetos_2.cpp  objetos_3.cpp  ordenacao.cpp  pilha.h  ponteiros.cpp  recursao.cpp  sets.cpp  sorts.h
Estudos/Metodos/: CMakeLists.txt  cargas.cpp  lancamentos.cpp  libs.h
Estudos/Metodos/dados/: dipolo.csv  graficos.py
ProjetoVS/: AprenderBoost.sln  Project1.vcxproj  Project1.vcxproj.filters  array01.h  assert.h  chkfile.h  classes.h  main.cpp
ProjetoVS/x64/Release/: Boost.exe.recipe  Boost.iobj  Boost.ipdb  Project1.vcxproj.FileListAbsolute.txt
ProjetoVS/x64/Release/Boost.tlog/: Boost.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
